objects/SDO_Service_openCTIconfig__c.object
<CustomObject>
    <description>What: Service object for CTI Config. Who:Service team.</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>AccountName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>openCTIconfigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <label>ContactName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>openCTIconfigs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>popContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>popContact</label>
        <type>Checkbox</type>
    </fields>
    <label>Lightning CTI Config</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>openCTIconfig Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lightning CTI Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>